version 0.99.5-beta XX-MMM-2010
 . [NEW] BitmapFontAtlas: added support for multilines labels
 . [NEW] BitmapFontAtlas: added optional setCString method
 . [NEW] Configuration: added a helper method to obtain the iOS version
 . [NEW] Config: added CC_OPTIMIZE_BLEND_FUNC_FOR_PREMULTIPLIED_ALPHA. Enabled by default.
 . [NEW] Sprite: Added support for Zwoptex v1.0 (issue #913)
 . [NEW] SpriteFrameCache: Added support for Zwoptex name aliases (issue #935)
 . [NEW] SpriteSheet is deprecatd. Use SpriteBatchNode instead.
 . [NEW] Support/ccUtils.h: added new file that contains some useful functions like nextPOT
 . [NEW] RenderTexture: default blend function compatible with premultiplied alpha (issue #937)
 . [NEW] Texture2D: Added support for Non compressed PVR images. New supported formats:
			RGBA_8888, BGRA_8888, RGBA_4444, RGBA_5551, RGB_565, A_8, AI_88, I_8
 . [NEW] Texture2D: PVR images can be treated as having alpha premultiplied with:
		+(void) PVRImagesHavePremultipliedAlpha:(BOOL)
 . [FIX] CCArray: conforms to NSCopying protocol (issue #934)
 . [FIX] CocosDenshion: Improved sound interruption code (issue #928)
 . [FIX] Particles: Built-in particles use QuadParticles when compiled in ARMv7,
                and PointParticles when compiled in ARMv6
 . [FIX] Templates & Tests: call CC_DIRECTOR_END() on AppDelegate Terminate
 . [FIX] Templates: Use LLVM-GCC as default compiler
 . [FIX] Tests: AtlasTest renamed to LabelTest
 . [FIX] Tests: CocosLive Demo: added requestRank tests
 . [FIX] TextureCache: JPEG workaround (issue #866) is only applied on iOS >= 4 (issue #932)
 . [3RD] libpng: updated to v1.2.44 (libpng is only used by a cocos2d test)
 
version 0.99.4 - 14-Jul-2010
 . [NEW] CocosDenshion: switching between background and foreground music (issue #928)
 . [FIX] CocosDenshion: fixed memory leak weak reallocing buffers (issue #919)
 . [FIX] CocosDenshion: SimpleAudioEngine's enable works as expected (issue #927)